@@ -1,3 +1,8 @@
+2010-02-21  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkText.c (TextEditCmd): [Bug 1799782]: Refix this, so that
+        <<Modified>> events are issued when things change.
+
 2010-02-19  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/installManPage: [Tcl Bug 2954638]: Correct behaviour of manual
